src/types/snapshots/cake__types__session__tests__session_json_task_start.snap
---
source: src/types/session.rs
expression: session_record_json(record)
---
{
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "task_id": "550e8400-e29b-41d4-a716-446655440001",
  "timestamp": "2026-05-10T12:34:56Z",
  "type": "task_start"
}
