src/types/snapshots/cake__types__session__tests__session_json_turn_usage.snap
---
source: src/types/session_tests.rs
expression: session_record_json(record)
---
{
  "attempt": 2,
  "model": "glm-5.1",
  "provider_request_id": "resp-fail",
  "response_model": "served-glm-5.1",
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "task_id": "550e8400-e29b-41d4-a716-446655440001",
  "terminal_class": "response_failed",
  "timestamp": "2026-05-10T12:34:56Z",
  "turn": 2,
  "type": "turn_usage",
  "usage": {
    "input_tokens": 1200,
    "input_tokens_details": {
      "cache_write_tokens": 0,
      "cached_tokens": 300
    },
    "output_tokens": 100,
    "output_tokens_details": {
      "reasoning_tokens": 40
    },
    "total_tokens": 1300
  },
  "usage_presence": "partial"
}
