src/types/snapshots/cake__types__session__tests__stream_record_json_function_call.snap
---
source: src/types/session.rs
expression: stream_json_for(&item)
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "type": "function_call"
}
