src/types/snapshots/cake__types__session__tests__stream_record_json_message_with_id_and_status.snap
---
source: src/types/session.rs
expression: stream_json_for(&item)
---
{
  "content": "Response",
  "id": "msg-123",
  "role": "assistant",
  "status": "completed",
  "type": "message"
}
