src/types/snapshots/cake__types__session__tests__stream_record_json_reasoning_plain_summary.snap
---
source: src/types/session_tests.rs
expression: stream_json_for(&item)
---
{
  "id": "r-1",
  "summary": [
    {
      "text": "step 1",
      "type": "summary_text"
    },
    {
      "text": "step 2",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
