src/types/snapshots/cake__types__session__tests__stream_record_json_replay_error.snap
---
source: src/types/session_tests.rs
expression: "serde_json::to_value(record).unwrap()"
---
{
  "error": "session not found: 550e8400-e29b-41d4-a716-446655440000",
  "exit_code": 3,
  "kind": "session_not_found",
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "type": "replay_error"
}
